Modified html and text file.

--- a/html1.html
+++ b/html1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 	<head><title>My title</title></head>
-	<body><b>Bold Text</b></body>
+	<body><b>Bold Text<br>A new line.</b></body>
 </html>
